# operatordb

./: .gitignore  Makefile.freebsd.in  Makefile.in  Makefile.linux.in  README.md  codesign.sh  configure  configure.in  generate_source_from_db.php  make_framework.sh  opdb.sql  operatordb.c  operatordb.h  operatordb.php  operatordb.sql  operatordb2.c  operatordb2.php
