dnl /* ==================================================================== 
dnl  * Project "operatordb"
dnl  * Copyright: © 2016 Andreas Fink (andreas@fink.org), Basel, Switzerland. All rights reserved.
dnl  * ====================================================================
dnl  */ 

dnl
dnl configure.in -- main autoconf macro definition file
dnl
dnl Process this file with autoconf to produce a configure script.
dnl

dnl initialization

AC_PREREQ([2.69])
AC_INIT([operatordb],[1.0],[afink])
AC_SUBST(SHELL)
AC_CONFIG_AUX_DIR(.)
AC_SET_TERMINAL_SEQUENCES()

COPYRIGHT="Copyright 2020 Andreas Fink"
PROJECT_NAME="operatordb"

dnl Set user who runs ./configure

AC_CONFIG_SECTION([Configuring for $PROJECT_NAME ])

dnl Checks system type.
AC_CONFIG_SECTION([Running system checks])
AC_CANONICAL_HOST

dnl Apply system specific rules.
dnl Executable extension for systems that need one, i.e. Cygwin
dnl Set the LIBTOOL to be used to create libs
EXE_EXT=""
LIBTOOL="ar rc"
RANLIB="ranlib"
LIBS=""
LIBRARY_NAME=$PROJECT_NAME
BUILD_DIR=.

PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
export PKG_CONFIG_PATH

SHARED_LIB_EXTENSION=so

	
case "$host" in
  *apple-darwin*) 
	SHARED_LIB_EXTENSION=dylib
	XARCH="-arch x86_64 -arch arm64"
    ;;


esac

echo XARCH=$XARCH

AC_SUBST(SHARED_LIB_EXTENSION)
AC_SUBST(XARCH)
AC_CONFIG_SECTION([Generating output files]) 
AC_CONFIG_FILES([Makefile.linux])
AC_CONFIG_FILES([Makefile.osx])
AC_CONFIG_FILES([Makefile.freebsd])
AC_CONFIG_FILES([make_buildnr.sh])
AC_OUTPUT

case "$host" in
  *apple-darwin*)
    cp Makefile.osx Makefile
    ;;
  *-linux-*)
    cp Makefile.linux Makefile
    ;;
  *-freebsd*)
    cp Makefile.freebsd Makefile
    ;;
esac

chmod 755 make_buildnr.sh

if [[ -f BUILDNR ]]
then
	echo "Buildnumber: `cat BUILDNR`"
else
	echo "1" > BUILDNR
	echo "Buildnumber: 1"
	./make_buildnr.sh
fi


dnl LICENSE notice
AC_CONFIG_SECTION([License information])

cat <<X
+--------------------------------------------------------------------
| Project: ${PROJECT_NAME} ${VERSION}
| ${COPYRIGHT}
+--------------------------------------------------------------------
X
